# advent-of-code-2021

./: README.md
.github/workflows/: cpp.yml  python.yml
cpp/: .clang-format  .gitignore  CMakeLists.txt
cpp/src/: Day1.cpp  Day1.hpp  Day1.test.cpp  Day2.cpp  Day2.hpp  Day2.test.cpp
python/: day_1.py  day_2.py  day_3.py  main.py  pyproject.toml  test_day_1.py  test_day_2.py  test_day_3.py
